# elgato_prompter_text_cli

./: README.md  elgato_prompter_text.py  pyproject.toml
elgato_prompter_text_cli/: core.py  restarter.py
